WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38153
Fix gcc compiler warnings in V8 bindings
https://bugs.webkit.org/show_bug.cgi?id=38153
Summary
Fix gcc compiler warnings in V8 bindings
James Robinson
Reported
2010-04-26 17:27:19 PDT
Fix gcc compiler warnings in V8 bindings
Attachments
Patch
(2.53 KB, patch)
2010-04-26 17:34 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(20.88 KB, patch)
2010-04-27 15:35 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2010-04-26 17:34:34 PDT
Created
attachment 54353
[details]
Patch
Nate Chapin
Comment 2
2010-04-27 09:05:32 PDT
Comment on
attachment 54353
[details]
Patch Excellent.
James Robinson
Comment 3
2010-04-27 15:35:28 PDT
Created
attachment 54461
[details]
Patch
WebKit Review Bot
Comment 4
2010-04-27 15:36:30 PDT
Attachment 54461
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.cpp:325: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.cpp:327: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.cpp:335: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.cpp:337: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.cpp:344: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.cpp:346: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.cpp:354: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.cpp:356: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.h:131: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.h:134: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.h:137: Extra space before ( in function call [whitespace/parens] [4] WebCore/bindings/scripts/test/GObject/WebKitDOMTestObj.h:140: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 12 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
James Robinson
Comment 5
2010-04-27 15:37:24 PDT
But it gets better...now with tests for the CodeGeneratorV8.pm changes! While I was in there I also taught CodeGeneratorGObject.pm all about the 'long long' type. Those changes are mostly blind, but the generated output looks sane. Adding Xan to the CC list to double-check that.
James Robinson
Comment 6
2010-04-27 15:37:57 PDT
CodeGeneratorGObject.pm generates code that does not conform to WebKit style guidelines, but I don't think that is too important to fix right now.
Adam Barth
Comment 7
2010-04-27 15:41:24 PDT
Comment on
attachment 54461
[details]
Patch LGTM. This testing harness kind of explodes the number of lines of code you end up touching with patches like this.
James Robinson
Comment 8
2010-04-27 15:51:43 PDT
Comment on
attachment 54461
[details]
Patch Clearing flags on attachment: 54461 Committed
r58345
: <
http://trac.webkit.org/changeset/58345
>
James Robinson
Comment 9
2010-04-27 15:51:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug