2010-04-27  James Robinson  <jamesr@chromium.org>

Reviewed by Adam Barth.

        Fix gcc 4.4.1 warnings on Linux in the chromium V8 bindings code.
        https://bugs.webkit.org/show_bug.cgi?id=38153

        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::callFunction):


Canonical link: https://commits.webkit.org/49619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58345 268f45cc-cd09-0410-ab3c-d52691b4dbfc