WebCore/bindings/v8/V8Proxy.cpp
@@ -474,7 +474,7 @@ v8::Local<v8::Value> V8Proxy::callFunction(v8::Handle<v8::Function> function, v8
 
 #if ENABLE(INSPECTOR)
         Page* inspectedPage = InspectorTimelineAgent::instanceCount() ? m_frame->page(): 0;
-        if (inspectedPage)
+        if (inspectedPage) {
             if (InspectorTimelineAgent* timelineAgent = inspectedPage->inspectorTimelineAgent()) {
                 v8::ScriptOrigin origin = function->GetScriptOrigin();
                 String resourceName("undefined");
@@ -486,6 +486,7 @@ v8::Local<v8::Value> V8Proxy::callFunction(v8::Handle<v8::Function> function, v8
                 timelineAgent->willCallFunction(resourceName, lineNumber);
             } else
                 inspectedPage = 0;
+        }
 #endif // !ENABLE(INSPECTOR)
 
         m_recursion++;
